Fix visible overflow for large concept representations

--- a/cilantro/static/cilantro/stylesheets/scss/define.scss
+++ b/cilantro/static/cilantro/stylesheets/scss/define.scss
@@ -288,10 +288,10 @@
     top: 0;
     bottom: 0;
     display: none;
+    overflow: auto;
 
     .content {
         @include box-shadow(none);
-        height: 100%;
         padding: 0;
     }
 }
